peek.css
/*! Peek.js (c) 2014 Mark Macdonald | http://mtmacdonald.github.io/peek/LICENSE */

/*
  make it easy to clear floats
*/

.p-clear-after::after {
  clear: both;
  height: 0;
  visibility: hidden;
  display: block;
  content:" ";
}

/*
  chart
*/

.chart {
  float: left;
  display: table; /*make left-container stretch to height of chart*/
}

.left-container {
  display: table-cell; /*make left-container stretch to height of chart*/
  vertical-align: middle;
  position: relative; /*make container the closest positioned ancestor for yLabel: http://stackoverflow.com/questions/28741562*/
  width: 20px; /*same as label line-height*/
}

.yLabel {
  text-align: center;
  overflow: hidden;
  height: 20px;
  line-height: 20px;
  position: absolute;
  bottom: 0;
  width: 400px; /*must be same as height of container*/
  transform: rotate(-90deg);
  transform-origin: top left;
}

.main-container {
  /*display: table-cell;*/
}

.title {
  text-align: center;
  overflow: hidden;
  height: 20px;
  line-height: 20px;
  font-weight: bold;
}

.xLabel {
  text-align: center;
  overflow: hidden;
  height: 20px;
  line-height: 20px;
}

.canvas {
  line-height: 0;
}

.canvas svg {

}

/**********************************************************************************************************************/

/*
  axes
*/

.axis path, .axis line{
  fill: none;
  stroke: grey;
  stroke-width: 1;
  shape-rendering: crispEdges; 
}

.axis text {
  font-family: sans-serif;
  font-size: 11px;
}

.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
}
.grid path {
    stroke-width: 0;
}

/**********************************************************************************************************************/

/*
  legends
*/

.legend {
  float: left;
  padding-left: 10px;
	width: 300px;
}

.legend div {
  /*inherited line height*/
}

.key {
  width: 18px;
  display: inline-block;
  box-sizing: border-box;
  vertical-align: middle;
  border-style: solid;
  border-width: 6px;
  border-radius: 3px;
}

.key-text {
  margin 0;
	padding-left: 4px;
  vertical-align: middle;
}

/**********************************************************************************************************************/

/*
  lines
*/

.area {
    fill: lightsteelblue;
    stroke-width: 0;
    opacity: 0.4;
}

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 2;
}

circle {
  stroke: steelblue;
  stroke-width: 2px;
}

.infobox {
  position: absolute;
  min-width: 100px;
  padding: 6px 6px;
  border-radius: 4px;
  box-shadow: 2px 2px 2px rgba(68,68,68,0.4);
  background-color: rgba(255,255,255,.75);
  display: none;
}
  .infobox p {
    margin:0;
  }

